# rules_updatesrc

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE
.github/workflows/: bazel.yml
doc/: BUILD.bazel  README.md  how_to.md
examples/: BUILD.bazel
examples/simple/: BUILD.bazel  WORKSPACE
examples/simple/header/: header.bzl
examples/simple/srcs/Bar/: BUILD.bazel
examples/simple/srcs/Foo/: BUILD.bazel
scripts/: BUILD.bazel  update_all.sh
tests/: BUILD.bazel
updatesrc/: BUILD.bazel  deps.bzl  updatesrc.bzl
updatesrc/internal/: BUILD.bazel  providers.bzl  update_src.bzl  update_srcs.bzl  updatesrc_update.bzl  updatesrc_update_all.bzl  updatesrc_update_test.bzl
