load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
)

bzl_library(
    name = "updatesrc",
    srcs = ["updatesrc.bzl"],
    deps = [
        "//updatesrc/internal:providers",
        "//updatesrc/internal:updatesrc_update",
        "//updatesrc/internal:updatesrc_update_all",
    ],
)

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
